Profile / Layout / Fixed the layout overflow issue

--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -1,5 +1,6 @@
 @use "sass:math";
 .profile-page {
+    overflow-y: visible !important;
     @include mq("phone", max) {
         margin: 0;
     }
